<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="20dip"
    android:layout_marginLeft="20dip"
    android:background="#66cc88"
    >

    <!--用户名-->
	    <TextView  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:textColor="#000000"
		    android:text="@string/user_name"
	  	    android:layout_marginTop="10dip"
	    />
		<LinearLayout 
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">
		    <EditText  
		    android:id="@+id/username"
		    android:singleLine="true"
		    android:layout_width="200dip" 
		    android:layout_height="wrap_content"/>
		              
		    <ImageButton android:id="@+id/Seluser"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
				android:background="@drawable/dropdown"
			    android:layout_gravity="center_vertical"		
		  	  />
  		</LinearLayout>
  	  
	 <!--密码-->
	    <TextView  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:layout_marginTop="20dip"
		    android:textColor="#000000"
		    android:text="@string/password"
	    />
	    
	    <EditText  
		    android:id="@+id/password"
		    android:singleLine="true"
		    android:layout_width="200dip" 
		    android:layout_height="wrap_content"
		    android:password ="true"
	    />

	 
	
	<!--网络接口-->
 	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dip"
	    >
  	  	<TextView  
		    android:id="@+id/ifName"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:textColor="#000000"
		    android:text="@string/netInterface"/>
	    <EditText  
		    android:id="@+id/iface"
		    android:singleLine="true"
		    android:editable="false"
		    android:layout_width="100dip" 
		    android:layout_height="wrap_content"/>

	     <ImageButton android:id="@+id/SelInterface"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:baselineAlignBottom="true"
			android:background="@drawable/dropdown"
			android:layout_gravity="center_vertical"	
	  	  />
    </LinearLayout>
    	
 	
 	    <!--拨号，清除保存的账号-->	
 	<LinearLayout 
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dip"
    android:layout_marginLeft="20dip"
    >  
		 <Button android:id="@+id/dialing"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:text="@string/dialing" 
	  	  />
	  	  
	  	  <Button android:id="@+id/cleanUsers"
	  	    android:layout_marginLeft="40dip"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:text="@string/cleanUsers" 
	  	  />
  	</LinearLayout>
  	
 	
    <TextView  
		    android:id="@+id/pppoeVersion"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:textColor="#000000"
		    android:layout_marginTop="40dip"
	/>
</LinearLayout>


